kubernetes/k8s-manifests/accounting.yaml
# Source: opentelemetry-demo/templates/component.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
  labels:
    opentelemetry.io/name: accounting
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/component: accounting
    app.kubernetes.io/name: accounting
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      opentelemetry.io/name: accounting
  template:
    metadata:
      labels:
        opentelemetry.io/name: accounting
        app.kubernetes.io/instance: opentelemetry-demo
        app.kubernetes.io/component: accounting
        app.kubernetes.io/name: accounting
    spec:
      serviceAccountName: opentelemetry-demo
      containers:
        - name: accounting
          #image: 'ghcr.io/open-telemetry/demo:2.0.2-accounting'
          image: 'ghcr.io/splunk/opentelemetry-demo/otel-accounting:0.0.3'
          imagePullPolicy: Always
          resources:
            limits:
              memory: 120Mi
          volumeMounts:
      volumes:
