kubernetes/k8s-manifests/sql-server-express.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sql
---
apiVersion: v1
kind: Service
metadata:
  name: sql-express
  namespace: sql
spec:
  type: ClusterIP
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
      name: tds
  selector:
    app: sql-express
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql-express
  namespace: sql
spec:
  serviceName: sql-express
  replicas: 1
  selector:
    matchLabels:
      app: sql-express
  template:
    metadata:
      labels:
        app: sql-express
    spec:
      securityContext:
        fsGroup: 10001        # mssql user can write PV
        runAsUser: 10001      # run container as mssql user
        runAsGroup: 0
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
              name: tds
          volumeMounts:
            - name: data
              mountPath: /var/opt/mssql
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          readinessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 30
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
            requests:
              storage: 5Gi
